tests/rosetta/out/Rust/cholesky-decomposition.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/cholesky-decomposition.rs:53:25
   |
53 |                 line += m[i as usize][j as usize].to_string();
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
53 |                 line += &m[i as usize][j as usize].to_string();
   |                         +

error[E0382]: use of moved value: `a`
  --> /tmp/cholesky-decomposition.rs:66:26
   |
63 |     fn demo(a: Vec<Vec<f64>>) -> () {
   |             - move occurs because `a` has type `Vec<Vec<f64>>`, which does not implement the `Copy` trait
64 |         println!("A:");
65 |         printMat(a);
   |                  - value moved here
66 |         let l = cholesky(a);
   |                          ^ value used here after move
   |
note: consider changing this parameter type in function `printMat` to borrow instead if owning the value isn't necessary
  --> /tmp/cholesky-decomposition.rs:47:20
   |
47 |     fn printMat(m: Vec<Vec<f64>>) -> () {
   |        --------    ^^^^^^^^^^^^^ this parameter takes ownership of the value
   |        |
   |        in this function
help: consider cloning the value if the performance cost is acceptable
   |
65 |         printMat(a.clone());
   |                   ++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0382.
For more information about an error, try `rustc --explain E0308`.
